# ml-training

./: .flake8  .gitignore  pyproject.toml  requirements.txt
tensorflow/basics/: subclassing-dense-layer.py  subclassing-model.py
vanilla-nn/: basic_nn.py  utils.py
