[tool.poetry]
name = "ml-training"
version = "0.1.0"
description = "Basic resources on ML techniques and problems"
authors = ["geertklop <geertklop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.3.0"
silence-tensorflow = "^1.1.1"
scikit-learn = "^0.23.2"
numpy = "^1.18.1"
matplotlib = "^3.3.1"
pandas = "^1.1.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.2.4"
black = "^19.10b0"
flake8 = "^3.8.3"
mypy = "^0.782"

[tool.black]
line-length = 88
target-version = ['py38']

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
